--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="project.html">Projects</a>
-                <a href="files/Yizi_S_Resume.pdf" download="Yizi's_Resume">Resume</a>
+                <a href="yizi/files/Yizi_S_Resume.pdf" download="Yizi's_Resume">Resume</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
@@ -34,7 +34,7 @@
         <h2 class="Hey2">A student specialising in UX/UI and graphic design, based in Melbourne.</h2>
         <a href="project.html" class="check">
             <button>
-                <img src="img/filler.png">
+                <img src="./img/filler.png">
             </button>
         </a>
     </body>
