--- a/project.html
+++ b/project.html
@@ -23,7 +23,7 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="project.html">Projects</a>
-                <a href="files/Yizi_S_Resume.pdf" download="Yizi's_Resume">Resume</a>
+                <a href="yizi/files/Yizi_S_Resume.pdf" download="Yizi's_Resume">Resume</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
@@ -33,7 +33,7 @@
             <div class="card">
                 <a href="#JTTMsection" class="card-link">
                     <button>
-                        <img src="img/jttm.png" width="300px" class="card-img1">
+                        <img src="./img/jttm.png" width="300px" class="card-img1">
                         <h2>Journey to the Moon</h2>
                         Click for More
                     </button>   
@@ -43,7 +43,7 @@
             <div class="card">
                 <a href="#HWsection" class="card-link">
                     <button>
-                        <img src="img/hw.png" width="300px" class="card-img2">
+                        <img src="./img/hw.png" width="300px" class="card-img2">
                         <h2>HEMWAYS: Melbourne & Ho Chi Minh City</h2>
                         Click for More
                     </button>
@@ -53,7 +53,7 @@
             <div class="card">
                 <a href="#TNTsection" class="card-link">
                     <button>
-                        <img src="img/tnt.png" width="300px" class="card-img3">
+                        <img src="./img/tnt.png" width="300px" class="card-img3">
                         <h2>Tech-Neck-Logy Timer</h2>
                         Click for More
                     </button>
@@ -63,7 +63,7 @@
             <div class="card">
                 <a href="#PFsection" class="card-link">
                     <button>
-                        <img src="img/paf.png" width="300px" class="card-img4">
+                        <img src="./img/paf.png" width="300px" class="card-img4">
                         <h2>Paw & Footprints</h2>
                         Click for More
                     </button>
@@ -92,9 +92,9 @@
             <h2>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna massa, posuere in nisl ut, lobortis luctus massa. Curabitur at ante ut erat pretium volutpat. Donec tempor mauris turpis, at consequat enim sodales in. Curabitur mattis hendrerit lorem, eget tincidunt massa scelerisque id. Aenean congue tempus metus, eget bibendum elit blandit at. Aliquam lobortis ipsum vitae vulputate vestibulum. Donec at pellentesque odio.
             </h2>
-            <embed src="files/Yizi Shao_UX_1.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
-            <embed src="files/Yizi Shao_UX_2.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
-            <embed src="files/Yizi Shao_UX_3.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
+            <embed src="yizi/files/Yizi Shao_UX_1.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
+            <embed src="yizi/files/Yizi Shao_UX_2.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
+            <embed src="yizi/files/Yizi Shao_UX_3.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
             
         </div>
 
