--- a/about.html
+++ b/about.html
@@ -23,14 +23,14 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="project.html">Projects</a>
-                <a href="../files/Yizi_S_Resume.pdf" download="Yizi's_Resume">Resume</a>
+                <a href="yizi/files/Yizi_S_Resume.pdf" download="Yizi's_Resume">Resume</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
 
         <div class="Name">
             <h1>Who is Yizi?</h1>
-            <img src="../img/YiziProfile.png" width="200px" class="ProfilePic">
+            <img src="./img/YiziProfile.png" width="200px" class="ProfilePic">
             <h2>
                 I am a digital design student at the Royal Melbourne Institute of Technology (RMIT) University.
             </h2>
