--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="project.html">Projects</a>
-                <a href="../files/Yizi_S_Resume.pdf" download="Yizi's_Resume">Resume</a>
+                <a href="yizi/files/Yizi_S_Resume.pdf" download="Yizi's_Resume">Resume</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </header>  
@@ -31,9 +31,9 @@
         <!--Social Media Links-->
         <div class="SocialMediaLinks">
             <h1>Let's Work Together!</h1>
-            <button><a href="https://www.linkedin.com/in/yizi-shao-449248253/" target="_blank" class="LinkedIn_link"><img src="../img/LinkedIn.png"></a></button>
-            <button><a href="https://www.instagram.com/theyuzuzy/" target="_blank" class="Instagram_link"><img src="../img/Instagram.png.webp"></a></button>
-            <button><a href="mailto: yizishao@gmail.com" target="_blank" class="Email_link"><img src="../img/Gmail.png"></a></button>
+            <button><a href="https://www.linkedin.com/in/yizi-shao-449248253/" target="_blank" class="LinkedIn_link"><img src="./img/LinkedIn.png"></a></button>
+            <button><a href="https://www.instagram.com/theyuzuzy/" target="_blank" class="Instagram_link"><img src="./img/Instagram.png.webp"></a></button>
+            <button><a href="mailto: yizishao@gmail.com" target="_blank" class="Email_link"><img src="./img/Gmail.png"></a></button>
         </div>
     </body>
 
