--- a/project.html
+++ b/project.html
@@ -23,7 +23,7 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="project.html">Projects</a>
-                <a href="/files/Yizi_S_Resume.pdf" download="Yizi's_Resume">Resume</a>
+                <a href="yizi/files/Yizi_S_Resume.pdf" download="Yizi's_Resume">Resume</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
@@ -37,7 +37,7 @@
                     <div class="card">
                         <a href="#JTTMsection" class="card-link">
                             <button>
-                                <img src="/img/jttm.png" width="300px" class="card-img1">
+                                <img src="yizi/img/jttm.png" width="300px" class="card-img1">
                                 <h2>Journey to the Moon</h2>
                                 Click for More
                             </button>   
@@ -47,7 +47,7 @@
                     <div class="card">
                         <a href="#HWsection" class="card-link">
                             <button>
-                                <img src="/img/hw.png" width="300px" class="card-img2">
+                                <img src="yizi/img/hw.png" width="300px" class="card-img2">
                                 <h2>HEMWAYS: Melbourne & Ho Chi Minh City</h2>
                                 Click for More
                             </button>
@@ -57,7 +57,7 @@
                     <div class="card">
                         <a href="#TNTsection" class="card-link">
                             <button>
-                                <img src="/img/tnt.png" width="300px" class="card-img3">
+                                <img src="yizi/img/tnt.png" width="300px" class="card-img3">
                                 <h2>Tech-Neck-Logy Timer</h2>
                                 Click for More
                             </button>
@@ -67,7 +67,7 @@
                     <div class="card">
                         <a href="#PFsection" class="card-link">
                             <button>
-                                <img src="/img/paf.png" width="300px" class="card-img4">
+                                <img src="yizi/img/paf.png" width="300px" class="card-img4">
                                 <h2>Paw & Footprints</h2>
                                 Click for More
                             </button>
@@ -149,17 +149,17 @@
 
             <section id="section-11" class="section-11">
                 <h3>Research</h3>
-                <embed src="../files/Yizi Shao_UX_1.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
+                <embed src="yizi/files/Yizi Shao_UX_1.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
             </section>
 
             <section id="section-12" class="section-12">
                 <h3>Challenges</h3>
-                <embed src="../files/Yizi Shao_UX_2.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
+                <embed src="yizi/files/Yizi Shao_UX_2.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
             </section>
 
             <section id="section-13" class="section-13">
                 <h3>Resolution & Roles</h3>
-                <embed src="../files/Yizi Shao_UX_3.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
+                <embed src="yizi/files/Yizi Shao_UX_3.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
             </section>
 
             <section id="section-14" class="section-14">
