--- a/project.html
+++ b/project.html
@@ -37,7 +37,7 @@
                     <div class="card">
                         <a href="#JTTMsection" class="card-link">
                             <button>
-                                <img src="yizi/img/jttm.png" width="300px" class="card-img1">
+                                <img src="./img/jttm.png" width="300px" class="card-img1">
                                 <h2>Journey to the Moon</h2>
                                 Click for More
                             </button>   
@@ -47,7 +47,7 @@
                     <div class="card">
                         <a href="#HWsection" class="card-link">
                             <button>
-                                <img src="yizi/img/hw.png" width="300px" class="card-img2">
+                                <img src="./img/hw.png" width="300px" class="card-img2">
                                 <h2>HEMWAYS: Melbourne & Ho Chi Minh City</h2>
                                 Click for More
                             </button>
@@ -57,7 +57,7 @@
                     <div class="card">
                         <a href="#TNTsection" class="card-link">
                             <button>
-                                <img src="yizi/img/tnt.png" width="300px" class="card-img3">
+                                <img src="./img/tnt.png" width="300px" class="card-img3">
                                 <h2>Tech-Neck-Logy Timer</h2>
                                 Click for More
                             </button>
@@ -67,7 +67,7 @@
                     <div class="card">
                         <a href="#PFsection" class="card-link">
                             <button>
-                                <img src="yizi/img/paf.png" width="300px" class="card-img4">
+                                <img src="./img/paf.png" width="300px" class="card-img4">
                                 <h2>Paw & Footprints</h2>
                                 Click for More
                             </button>
