--- a/project.html
+++ b/project.html
@@ -217,7 +217,7 @@
             <section id="section-11" class="section-11">
                 <h3>Users are able to form a daily habit of reseting and maintaining good posture, through setting two types of notifications. One type of notification allows reminders to be set at an interval, which will occur repeatedly. The second type allows reminders to be set at certain times.
                     This ensures users are able to fit good posture into their lives, in the way they want. They can also set the duration for maintaining good posture, to up to 5 minutes. To maintain good posture, a step-by-step visual guide, accompanied with brief text, will guide users. </h3>
-                <embed src="yizi/files/Yizi Shao_UX_1.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
+                <embed src="./files/Yizi Shao_UX_1.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
             </section>
 
             <section id="section-12" class="section-12">
@@ -227,7 +227,7 @@
                     <li>Colour palette: I tried to create a playful app, however the minimalistic colour scheme of greens and a contrasting hue of reddish-brown failed to present this feeling. Further, the reddish-brown was used on the page where the user gives up on practising posture. I realised it would discourage the user with this colour and thus, decided to change it. The colours have to be neutral, so there are no negative connotations.</li> 
                     <li>Design of Home Page: There is a ‘tap for more’ button on the middle left of the page. This is the result of my various attempts of showcasing what durations are suited for what types of people, such as 1 minute for busy people and 5 minutes for those who have more time. However, this button seems out of place and creates an imbalance in the visual hierarchy. As a result, I decided to move the short descriptions of the different durations into the interface when the timer starts.</li> 
                     </h3>
-                <embed src="yizi/files/Yizi Shao_UX_2.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
+                <embed src="./files/Yizi Shao_UX_2.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
             </section>
 
             <section id="section-13" class="section-13">
@@ -241,7 +241,7 @@
                     <li>I made sure to include information needs and patterns</li>
                     <li>I created a design system, focusing on visual hierarchy, moodboard and aesthetic styles </li>
                     </h3>
-                <embed src="yizi/files/Yizi Shao_UX_3.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
+                <embed src="./files/Yizi Shao_UX_3.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%" height="400px" class="TTfile"/>
             </section>
 
             <section id="section-14" class="section-14">
