--- a/project.html
+++ b/project.html
@@ -101,7 +101,7 @@
 
             <section id="section-4" class="section-4">
                 <div class="JTTMmockup_container">
-                <img src="./img/jttmmockup.png" width="600px">
+                <img src="yizi/img/jttmmockup.png" width="600px">
                 <h3>
                     <ul>
                         To honour the cultural significance of Chinatown in Melbourne, we proposed an app that would showcase a 3D model of Chinatown, upon scanning a physical map via the camera.
@@ -122,10 +122,10 @@
                     <h2>
                         Key Graphics & Animation
                     </h2>  
-                    <img src="./img/map1.png" width="350px">
-                    <img src="./video/jttmgif.gif" width="400px">
-                    <img src="./img/jttmloadinggraphic.png" width="200px">
-                    <img src="./img/jttmmoonrabbit.png" width="200px">
+                    <img src="yizi/img/map1.png" width="350px">
+                    <img src="yizi/video/jttmgif.gif" width="400px">
+                    <img src="yizi/img/jttmloadinggraphic.png" width="200px">
+                    <img src="yizi/img/jttmmoonrabbit.png" width="200px">
                 </div>
             </section>
 
@@ -205,7 +205,7 @@
 
              <section id="section-10" class="section-10">
                 <div id="pafgraphics_container" class="pafgraphics_container">
-                    <img src="./img/pafpolarbear.gif" width="400px">
+                    <img src="yizi/img/pafpolarbear.gif" width="400px">
                     <h3> As a form of activism, Paw & Footprints is a mobile application that aims to:
                         <ul>
                             <li>Educate the user on the species that are at risk due to climate change</li>
@@ -214,13 +214,13 @@
                             <li>Motivate users with a record of all the actions they have taken to support the environment</li>
                         </ul>
                         </h3>
-                    <img src="./img/pafbutterfly.gif" width="400px">
+                    <img src="yizi/img/pafbutterfly.gif" width="400px">
                 </div>
             </section>
 
             <section id="section-11" class="section-11">
                 <div id="pafmockup_container" class="pafmockup_container">
-                    <img src="./img/pafmockup.png" width="600px">
+                    <img src="yizi/img/pafmockup.png" width="600px">
                     <h3> 
                         <ul>
                             <li>When four daily tasks are completed, a specimen is unlocked at random and there is a ‘Learn More’ button that leads to more information about the unlocked specimen.</li>
@@ -299,15 +299,15 @@
             </section>
 
             <section id="section-15" class="section-15">
-                <img src="./img/tntmockup1.png" width="1000px">
+                <img src="yizi/img/tntmockup1.png" width="1000px">
             </section>
 
             <section id="section-16" class="section-16">
-                <img src="./img/tntmockup2.png" width="1000px">
+                <img src="yizi/img/tntmockup2.png" width="1000px">
             </section>
 
             <section id="section-17" class="section-17">
-                <img src="./img/tntmockup3.png" width="1000px">
+                <img src="yizi/img/tntmockup3.png" width="1000px">
             </section>
 
             <section id="section-18" class="section-18">
@@ -346,7 +346,7 @@
                         <li>I made sure to include information needs and patterns</li>
                         <li>I created a design system, focusing on visual hierarchy, moodboard and aesthetic styles </li>
                     </ul>
-                    <img src="./img/tntexperiencemap.png" width="400px"></div>
+                    <img src="yizi/img/tntexperiencemap.png" width="400px"></div>
             </section>
 
 
@@ -372,16 +372,16 @@
             </section>
 
             <section id="section-22" class="section-22">
-                <img src="./img/hwdesktop1.png" width="400px">
-                <img src="./img/hwdesktop2.png" width="400px">
-                <img src="./img/hwdesktop3.png" width="400px">
-                <img src="./img/hwdesktop4.png" width="400px">
+                <img src="yizi/img/hwdesktop1.png" width="400px">
+                <img src="yizi/img/hwdesktop2.png" width="400px">
+                <img src="yizi/img/hwdesktop3.png" width="400px">
+                <img src="yizi/img/hwdesktop4.png" width="400px">
                 
             </section>
 
             <section id="section-23" class="section-23">
-                <img src="./img/hwmobile2.png" width="500px">
-                <img src="./img/hwmobile1.png" width="500px">
+                <img src="yizi/img/hwmobile2.png" width="500px">
+                <img src="yizi/img/hwmobile1.png" width="500px">
             </section>
 
             <section id="section-24" class="section-24">
