--- a/project.html
+++ b/project.html
@@ -101,7 +101,7 @@
 
             <section id="section-4" class="section-4">
                 <div class="JTTMmockup_container">
-                <img src="./img/jttmmockup.png" width="600px">
+                <img src="../img/jttmmockup.png" width="600px">
                 <h3>
                     <ul>
                         To honour the cultural significance of Chinatown in Melbourne, we proposed an app that would showcase a 3D model of Chinatown, upon scanning a physical map via the camera.
