--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="project.html">Projects</a>
-                <a href="./files/Yizi_S_Resume.pdf" download="Yizi's_Resume">Resume</a>
+                <a href="./files/Yizi_S_Resume.pdf" download="Yizi_S_Resume.pdf">Resume</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </header>  
